# simple-http-server

./: CHANGELOG.md  Cargo.toml  README.md  VERSIONING.md
example-setup/: 404.html  config.toml  index.html
src/: main.rs
