[package]
name = "simple-http-server"
# note: this crate is pretty much finished,
# but it won't be `1.x` until all its dependencies are.
version = "0.4.0-dev"
edition = "2021"
rust-version = "1.75.0"

authors = ["T0mstone <realt0mstone@gmail.com>"]
license = "MIT-0"

[features]
default = ["http1", "http2"]

http1 = ["axum/http1"]
http2 = ["axum/http2"]

[dependencies]
axum = { version = "0.8", default-features = false, features = ["tokio"] }
camino = { version = "1.0.5", features = ["serde1"] }
mime = "0.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "net"] }
toml = "0.8"
